// AUTOMATICALLY GENERATED BY SimpleRPC

syntax = "proto3";
import "google/protobuf/empty.proto";
package ProfileLogicpkg;

service ProfileLogic {
    rpc delete_user(delete_userRequest) returns (delete_userResponce) {}
    rpc get_user_info(get_user_infoRequest) returns (get_user_infoResponce) {}
}

message delete_userResponce {
}
message get_user_infoRequest {
    int64 userId = 1;
}
message delete_userRequest {
    int64 userId = 1;
}
message get_user_infoResponce {
    int64 userId = 1;
    string type = 2;
    bool isConfirmed = 3;
    bool isSupplierStatusConfirmed = 4;
    bool isAdmin = 5;
}
