// AUTOMATICALLY GENERATED BY SimpleRPC

syntax = "proto3";
import "google/protobuf/empty.proto";
package AdminLogicpkg;

service AdminLogic {
    rpc list_suppliers_requests(list_suppliers_requestsRequest) returns (list_suppliers_requestsResponce) {}
    rpc approve_supplier_request(approve_supplier_requestRequest) returns (approve_supplier_requestResponce) {}
}

message approve_supplier_requestRequest {
    int64 id = 1;
}
message list_suppliers_requestsRequest {
    int64 start = 1;
    int64 count = 2;
    string sort = 3;
}
message approve_supplier_requestResponce {
}
message UserSchema {
    int64 userId = 1;
    string type = 2;
    bool isConfirmed = 3;
    bool isSupplierStatusConfirmed = 4;
    bool isAdmin = 5;
}
message list_suppliers_requestsResponce {
    repeated UserSchema UserSchemasArray = 1;
}
